# HW/server/config/swagger.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 # Added by API Auto Mocking Plugin
-servers: Express
+servers:
   - description: SwaggerHub API Auto Mocking
     url: ''
 info:
@@ -78,7 +78,7 @@ paths:
             schema:
               $ref: '#/components/schemas/Article'
         description: Article to add
-  /api/articles{id}:
+  /api/article/{id}:
     put:
       tags:
         - Articles
@@ -96,7 +96,7 @@ paths:
             schema:
               $ref: '#/components/schemas/Article'
         description: Article to update
-  /api/articles{id}:
+  /api/list{id}:
     delete:
       tags:
         - Articles
@@ -114,7 +114,7 @@ paths:
             schema:
               $ref: '#/components/schemas/Article'
         description: Article to delete
-  /api/articles:
+  /api/list:
     delete:
       tags:
         - Articles
