# HW/server/routes/index.js
@@ -4,7 +4,8 @@ const router = express.Router();
 const fs = require("fs");
 
 let list;
-fs.readFile("./config/articles.json", "utf8", function(err, data) {
+
+fs.readFile("./config/articles.json", "utf8", (err, data) => {
   if (err) {
     return log.err(err);
   }
@@ -19,13 +20,13 @@ fs.readFile("./config/articles.json", "utf8", function(err, data) {
 router.route('/articles')
   .get((req, res) => {
     log.info('==Get all list articles==');
-    res.end(res.json(list));
+    res.json(list);
   })
 router.route('/article')
   .post((req, res) => {
     log.info('==Save article==');
     list.push(req.body);
-    res.end(res.json(list));
+    res.json(list);
   })
 router.route('/articles/:id')
   .get((req, res) => {
@@ -34,9 +35,9 @@ router.route('/articles/:id')
     if (!articleById) {
         res.sendStatus(404).end();
     }
-    res.end(res.json(articleById));
+    res.json(articleById);
   })
-router.route('/articles/:id')
+router.route('/article/:id')
   .put((req, res) => {
     log.info('==Edit article by id==');
     const index = list.findIndex(article => +article.id === +req.params.id);
@@ -45,15 +46,15 @@ router.route('/articles/:id')
     const  updatedArticle = {...articleById , ...req.body};
         list[index] = updatedArticle;
     }
-    res.end(res.json(list));
+    res.json(list);
   })
-router.route('/articles/:id')
+router.route('/list/:id')
   .delete((req, res) => {
     log.info('==Delete article by id==');
     list = list.filter(article => +article.id !== +req.params.id);
-    res.end(res.json(list));
+    res.sendStatus(201).end();
   })
-router.route('/articles')
+router.route('/list')
   .delete((req, res) => {
     log.info('==Delete all articles==');
     list.splice(0, list.length);
